# FeedbackReport

./: .gitignore  Dockerfile  README.md  docker-compose.yml
app/: .env  .env.example  api.yaml  pyproject.toml
app/core/: settings.py  urls.py
app/reports/: admin.py  llm_integration.py  models.py  task.py  urls.py  views.py
app/reports/migrations/: 0001_initial.py  0002_htmlreport_student_id_pdfreport_student_id.py
app/reports/templates/reports/: student_report.html
